--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,12 +2,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/9795d6a93b.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>Generator</title>
+
   </head>
   <body>
+    <nav class="navbar">
+      <h2>Random Password Generator <i class="fa-solid fa-key"></i></h2>
+    </nav>
     {{{body}}}
 
+    <script src="/javascripts/generator.js"></script>
     <script src="/javascripts/bootstrap.bundle.min.js"></script>
   </body>
 </html>
